--- a/client/imports/app/components/todomanager/todomanager.component.html
+++ b/client/imports/app/components/todomanager/todomanager.component.html
@@ -1,4 +1,4 @@
-<div class="todo-manager-container">
+<div class="inset-container" fxLayout="column" fxLayoutAlign="center center">
     <h1>Todos</h1>
     <form class="form-inline" (ngSubmit)="onSubmit()">
         <md-input-container>
