--- a/client/imports/app/app.component.html
+++ b/client/imports/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="inset-container">
-    <md-toolbar color="primary" class="mat-elevation-z6">
+<div class="app-container">
+    <md-toolbar class="z-depth-1 z-index-11" color="primary">
         <button md-button (click)="sidenav.toggle()">
             <md-icon>menu</md-icon>
         </button>
@@ -10,13 +10,16 @@
             mode="side" 
             opened="true" 
             class="mat-elevation-z1">
-            <md-list *ngIf="!!user">
+            <md-list *ngIf="!!user" fxLayoutAlign="center center" fxLayout="column">
                 <user-card-list-item *ngIf="!!user" [user]="user.services.google">
                 </user-card-list-item>
+                <button md-raised-button (click)="logout()">Logout</button>
             </md-list>
             <md-list *ngIf="!user">
                 <md-list-item>
-                    <p>Please login</p>
+                    <button md-button (click)="login()">
+                        <md-icon>person_outline</md-icon> Login
+                    </button>
                 </md-list-item>
             </md-list>
         </md-sidenav>
