--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -46,3 +46,9 @@ body {
 .z-depth-5 {
   box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.3);
 }
+
+html, body, app, md-sidenav-container, app-layout {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
