--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -5,7 +5,7 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$app-primary: mat-palette($mat-blue);
+$app-primary: mat-palette($mat-blue, 800);
 $app-accent:  mat-palette($mat-red);
 
 // The warn palette is optional (defaults to red).
